--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas</title>
     <link rel = "stylesheet" href = "style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <canvas id="paper">
+    <canvas id="paper" width="500px" height="500px"></canvas>
+    <button onclick="selectMode(this.id)" id="brush">brush</button>
+    <button onclick="selectMode(this.id)" id="erase">eraser</button>
 
-    </canvas>
+    <input type="range" min="1" max="30" step="1" value="5" id="thickness">
+    <canvas id="palette-main" width="300px" height="300px"></canvas>
+    <canvas id="palette-right" width="50px" height="300px"></canvas>
+
+    <p id="color-test">Hi</p>
+
+
+
+    <script src="palette.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
