--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <canvas id="paper" width="500px" height="500px"></canvas>
     <button onclick="selectMode(this.id)" id="brush">brush</button>
     <button onclick="selectMode(this.id)" id="erase">eraser</button>
+    <button onclick="selectMode(this.id)" id="rect">rect</button>
+    <button onclick="selectMode(this.id)" id="circle">Circle</button>
 
     <input type="range" min="1" max="30" step="1" value="5" id="thickness">
     <canvas id="palette-main" width="300px" height="300px"></canvas>
