--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button onclick="selectMode(this.id)" id="erase">eraser</button>
         <button onclick="selectMode(this.id)" id="rect">rect</button>
         <button onclick="selectMode(this.id)" id="circle">Circle</button>
+        <button onclick="resetAll()">reset</button>
 
         <input type="range" min="1" max="30" step="1" value="5" id="thickness">
         <canvas id="palette-main" width="300px" height="300px"></canvas>
