add text input (maybe can add more fonts etc.)

--- a/index.html
+++ b/index.html
@@ -16,15 +16,29 @@
     <div>
         <button onclick="selectMode(this.id)" id="brush">brush</button>
         <button onclick="selectMode(this.id)" id="erase">eraser</button>
-        <button onclick="selectMode(this.id)" id="rect">rect</button>
-        <button onclick="selectMode(this.id)" id="circle">Circle</button>
+        <button onclick="selectMode(this.id)" id="rect">rectangle</button>
+        <button onclick="selectMode(this.id)" id="circle">circle</button>
+        <button onclick="selectMode(this.id)" id="tri">triangle</button>
+        <button onclick="selectMode(this.id)" id="font">font</button>
         <button onclick="resetAll()">reset</button>
 
+
+    </div>
+    <div>
         <input type="range" min="1" max="30" step="1" value="5" id="thickness">
         <canvas id="palette-main" width="300px" height="300px"></canvas>
         <canvas id="palette-right" width="50px" height="300px"></canvas>
-
-        <p id="color-test">Hi</p>
+        <select id="font-family">
+            <option value="Arial">Arial</option>
+            <option value="Times New Roman">Times New Roman</option>
+            <option value="serif">serif</option>
+        </select>
+        <select id="font-size">
+            <option value="10">10px</option>
+            <option value="30">30px</option>
+            <option value="60">60px</option>
+            <option value="100">100px</option>
+        </select>
 
     </div>
 
