--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <button onclick="selectMode(this.id)" id="tri">triangle</button>
         <button onclick="selectMode(this.id)" id="font">font</button>
         <button onclick="resetAll()">reset</button>
-
-
+        <button onclick="download()">download</button>
+        <button onclick="upload()">upload</button>
     </div>
     <div>
         <input type="range" min="1" max="30" step="1" value="5" id="thickness">
