--- a/index.html
+++ b/index.html
@@ -5,49 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas</title>
     <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="tool.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
     <link rel = "stylesheet" href = "style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <div class="wrapper">
-        <canvas id="savedpaper" width="700px" height="700px"></canvas>
-        <canvas id="paper"      width="700px" height="700px"></canvas>
-
-    </div>
-    <div>
-        <button onclick="selectMode(this.id)" id="brush">brush</button>
-        <button onclick="selectMode(this.id)" id="erase">eraser</button>
-        <button onclick="selectMode(this.id)" id="rect">rectangle</button>
-        <button onclick="selectMode(this.id)" id="circle">circle</button>
-        <button onclick="selectMode(this.id)" id="tri">triangle</button>
-        <button onclick="selectMode(this.id)" id="font">font</button>
-        <br>
-        <button onclick="resetAll()">reset</button>
-        <button onclick="download()">download</button>
-        <button data-toggle="modal" data-target="#uploadModal">upload</button>
-        <button onclick="Undo()">undo</button>
-        <button onclick="Redo()">redo</button>
-    </div>
-
-    <div>
-        <input type="range" min="1" max="30" step="1" value="5" id="thickness">
-        <canvas id="palette-main" width="300px" height="300px"></canvas>
-        <canvas id="palette-right" width="50px" height="300px"></canvas>
-        <select id="font-family">
-            <option value="Arial">Arial</option>
-            <option value="Times New Roman">Times New Roman</option>
-            <option value="serif">serif</option>
-        </select>
-        <select id="font-size">
-            <option value="10">10px</option>
-            <option value="30">30px</option>
-            <option value="60">60px</option>
-            <option value="100">100px</option>
-        </select>
-
-    </div>
-
     <!-- upload file modal -->
     <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -68,10 +31,107 @@
             </div>
         </div>
     </div>
+    <div class="flex-container">
+        <div class="title">
+            <h1>Web Canvas</h1>
+        </div>
+        <div class="main">
+            <div class="canvas-wrapper">
+                <div class="canvas">
+                    <canvas id="savedpaper" width="700px" height="700px"></canvas>
+                    <canvas id="paper"      width="700px" height="700px"></canvas>
 
+                </div>
+            </div>
+            <div class="toolbar">
+                <div>
+                    <div class="tool-line">
+                        <div class="item">
+                            <img class='tool' src="img/brush2.png" onclick="selectMode(this.id)" id="brush">
+                        </div>
+                        <div class="item">
+                            <div class="dropdown">
+                                <a href="#" id="menu1" data-toggle="dropdown" class="dropdown-toggle" data-offset="-50, 35" data-auto-close="inside" onclick="selectMode('erase_choose')">
+                                    <img src="img/eraser2.png" class="tool" id="erase_choose" >
+                                </a>
+                                <ul class="dropdown-menu horizontal" aria-labelledby="menu1">
+                                    <li>
+                                        <img class='tool' src="img/eraser2.png" onclick="selectMode(this.id)" id="erase">
+                                    </li>
+                                    <li>
+                                        <img class='tool' src="img/eraseArea2.png" onclick="selectMode(this.id)" id="eraseArea">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class='tool' src="img/font2.png" onclick="selectMode(this.id)" id="font">
+                        </div>
+                    </div>
+                    <!-- <div class="item">
+                        <img class='tool' src="img/eraser2.png" onclick="selectMode(this.id)" id="erase">
+                    </div>
+                    <div class="item">
+                        <img class='tool' src="img/eraseArea2.png" onclick="selectMode(this.id)" id="eraseArea">
+                    </div> -->
+                    <div class="tool-line">
+                        <div class="item">
+                            <img class='tool' src="img/rectangle2.png" onclick="selectMode(this.id)" id="rect">
+                        </div>
+                        <div class="item">
+                            <img class='tool' src="img/circle2.png" onclick="selectMode(this.id)" id="circle">
+                        </div>
+                        <div class="item">
+                            <img class='tool' src="img/triangle2.png" onclick="selectMode(this.id)" id="tri">
+                        </div>
+                    </div>
+                </div>
 
-
-
+                <div>
+                    <input type="range" min="1" max="30" step="1" value="5" id="thickness">
+                    <canvas id="palette-main" width="300px" height="300px"></canvas>
+                    <canvas id="palette-right" width="50px" height="300px"></canvas>
+                    <select id="font-family">
+                        <option value="Arial">Arial</option>
+                        <option value="Times New Roman">Times New Roman</option>
+                        <option value="serif">serif</option>
+                    </select>
+                    <select id="font-size">
+                        <option value="10">10px</option>
+                        <option value="30">30px</option>
+                        <option value="60">60px</option>
+                        <option value="100">100px</option>
+                    </select>
+                </div> 
+            </div>
+        </div>
+        <div class="toolbar2">
+            <div class="item">
+                <img src="img/reset.png" onclick="resetAll()">
+            </div>
+            <div class="item">
+                <img src="img/download.png" onclick="download()">
+            </div>
+            <div class="item">
+                <img src="img/upload.png" data-toggle="modal" data-target="#uploadModal">
+            </div>
+            <div class="item">
+                <img src="img/undo.png" onclick="Undo()">
+            </div>
+            <div class="item">
+                <img src="img/redo.png" onclick="Redo()">
+            </div>
+            <div class="item">
+                <img src="img/rotL.png" onclick="rotateLeft('add')">
+            </div>
+            <div class="item">
+                <img src="img/rotR.png" onclick="rotateRight('add')">
+            </div>
+            <div class="item">
+                <img src="img/flip.png" onclick="flip('add')">
+            </div>
+        </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
