--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="other-selector">
                             <div class="fill-selector">
-                                <img src="img/circle2.png" width="50px" id="fillSelector" onclick="fillChange()">
+                                <img src="img/circle2.png" id="fillSelector" onclick="fillChange()">
                             </div>
                             <div class="width-selector">
                                 <input type="range" min="1" max="30" step="1" value="5" id="thickness">
